--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "playstation-test",
   "private": true,
+  "homepage": "https://github.com/EliHood/small-play-app",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
