--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "playstation-test",
   "private": true,
-  "homepage": "https://elihood.github.io/playstation-app/",
+  "homepage": "https://elihood.github.io/small-play-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
