--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.2.5",
+    "ts-jest-mock-import-meta": "^1.2.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
